@@ -4,6 +4,7 @@ import io.taraxacum.finaltech.util.ItemStackUtil;
 import me.mrCookieSlime.Slimefun.Objects.SlimefunItem.abstractItems.MachineRecipe;
 import org.bukkit.inventory.ItemStack;
 
+import javax.annotation.Nonnull;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -15,15 +16,15 @@ public class RandomMachineRecipe extends MachineRecipe {
     private final List<RandomOutput> randomOutputList;
     private int weightSum = 0;
 
-    public RandomMachineRecipe(MachineRecipe machineRecipe, List<RandomOutput> randomOutputList) {
-        super(machineRecipe.getTicks(), machineRecipe.getInput(), machineRecipe.getOutput());
+    public RandomMachineRecipe(@Nonnull MachineRecipe machineRecipe, @Nonnull List<RandomOutput> randomOutputList) {
+        super(machineRecipe.getTicks(), machineRecipe.getInput(), new ItemStack[0]);
         this.randomOutputList = randomOutputList;
         for (RandomOutput randomOutput : this.randomOutputList) {
             this.weightSum += randomOutput.weight;
         }
     }
 
-    public RandomMachineRecipe(int ticks, ItemStack[] input, List<RandomOutput> randomOutputList) {
+    public RandomMachineRecipe(int ticks, @Nonnull ItemStack[] input, @Nonnull List<RandomOutput> randomOutputList) {
         super(ticks, input, new ItemStack[0]);
         this.randomOutputList = randomOutputList;
         for (RandomOutput randomOutput : this.randomOutputList) {
@@ -31,6 +32,7 @@ public class RandomMachineRecipe extends MachineRecipe {
         }
     }
 
+    @Nonnull
     @Override
     public ItemStack[] getOutput() {
         int r = (int)(Math.random() * this.weightSum);
@@ -39,19 +41,21 @@ public class RandomMachineRecipe extends MachineRecipe {
                 r -= randomOutput.getWeight();
                 continue;
             }
-            return ItemStackUtil.calItemArray(randomOutput.getOutputItem());
+            return ItemStackUtil.getItemArray(randomOutput.getOutputItem());
         }
         return new ItemStack[0];
     }
 
+    @Nonnull
     public ItemStack[] getAllOutput() {
         List<ItemStack> itemList = new ArrayList<>();
         for (RandomOutput randomOutput : this.randomOutputList) {
             itemList.addAll(randomOutput.outputItem);
         }
-        return ItemStackUtil.calItemArray(itemList);
+        return ItemStackUtil.getItemArray(itemList);
     }
 
+    @Nonnull
     public List<RandomOutput> getRandomOutputList() {
         return randomOutputList;
     }
@@ -60,26 +64,27 @@ public class RandomMachineRecipe extends MachineRecipe {
         private List<ItemStack> outputItem;
         private int weight;
 
-        public RandomOutput(List<ItemStack> outputItem, int weight) {
+        public RandomOutput(@Nonnull List<ItemStack> outputItem, int weight) {
             this.outputItem = outputItem;
             this.weight = weight;
         }
 
-        public RandomOutput(ItemStack[] outputItem, int weight) {
+        public RandomOutput(@Nonnull ItemStack[] outputItem, int weight) {
             this.outputItem = Arrays.stream(outputItem).toList();
             this.weight = weight;
         }
 
-        public RandomOutput(ItemStack outputItem, int weight) {
-            this.outputItem = Arrays.asList(outputItem);
+        public RandomOutput(@Nonnull ItemStack outputItem, int weight) {
+            this.outputItem = List.of(outputItem);
             this.weight = weight;
         }
 
+        @Nonnull
         public List<ItemStack> getOutputItem() {
             return outputItem;
         }
 
-        public void setOutputItem(List<ItemStack> outputItem) {
+        public void setOutputItem(@Nonnull List<ItemStack> outputItem) {
             this.outputItem = outputItem;
         }
 
